--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,26 +1,27 @@
 
 <div class="container">
-	<div class="row">
-		<img class="rounded" src="../assets/images/logo.png">	
-	</div>
-	
+		<div class="row justify-content-center align-items-center">
+			<img class="rounded" src="../assets/images/logo.png">	
+		</div>
+	<br>
+	<br>
+		<div class="row ">
+			<div class="col">
+				<a routerLink="/welcome">Welcome</a>
+			</div>
+			<div class="col">
+				<a routerLink="/purpose">Purpose</a>
+			</div>
+		</div>
 
-	<div class="row">
-		<div class="col">
-			<a routerLink="/welcome">Welcome</a>
+		<div class="row">
+			<div class="col">
+				<a routerLink="/location">Location</a>
+			</div>
+			<div class="col">
+				<a routerLink="/date">Date</a>
+			</div>
 		</div>
-	<div class="col">
-		<a routerLink="/purpose">Purpose</a>
-	</div>
-</div>
-<div class="row">
-		<div class="col">
-			<a routerLink="/location">Location</a>
-		</div>
-		<div class="col">
-			<a routerLink="/date">Date</a>
-		</div>
-</div>
 </div>
 
   <!-- a *ngFor="let hero of heroes" class="col-1-4"
