--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,21 +5,29 @@
 		</div>
 	<br>
 	<br>
-		<div class="row ">
-			<div class="col">
-				<a routerLink="/welcome">Welcome</a>
+		<div class="row">
+			<div class="col" style="align-content: center;">
+				<a routerLink="/welcome">
+					<img class="rounded dash_img" src="../assets/images/invitation.png" >
+				<br><small>Welcome</small>
+			</a>
 			</div>
 			<div class="col">
-				<a routerLink="/purpose">Purpose</a>
+				<a routerLink="/purpose"><img class="rounded dash_img" src="../assets/images/goal.png">
+				<br><small>Purpose</small>
+			</a>
 			</div>
 		</div>
-
+	<br>
+	<br>
 		<div class="row">
 			<div class="col">
-				<a routerLink="/location">Location</a>
+				<a routerLink="/location"><img class="rounded dash_img" src="../assets/images/map.png">
+				<br><small>Location</small></a>
 			</div>
 			<div class="col">
-				<a routerLink="/date">Date</a>
+				<a routerLink="/date"><img class="rounded dash_img" src="../assets/images/calendar.png">
+				<br><small>Date</small></a>
 			</div>
 		</div>
 </div>
