working on gallery

--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -1,3 +1,41 @@
-<p>
-  agenda works!
-</p>
+
+<h3>Day 1</h3>
+
+<ul class="list-group">
+  <li class="list-group-item" data-toggle="collapse" data-target="#demo">First item</li>
+  	<div id="demo" class="collapse">
+		Lorem ipsum dolor text....
+	</div>
+  <li class="list-group-item" data-toggle="collapse" data-target="#demo2">Second item</li>
+  	<div id="demo2" class="collapse">
+		Lorem ipsum dolor text....
+	</div>	
+    <li class="list-group-item" data-toggle="collapse" data-target="#demo3">Third item</li>
+  	<div id="demo3" class="collapse">
+		Lorem ipsum dolor text....
+	</div>
+  <li class="list-group-item">Another item</li>
+  <li class="list-group-item">Another item</li>
+  <li class="list-group-item">Another item</li>
+</ul>
+<br>
+<br>
+<br>
+<h3>Day 2</h3>
+
+<ul class="list-group">
+  <li class="list-group-item">First item</li>
+  <li class="list-group-item">Second item</li>
+  <li class="list-group-item">Third item</li>
+  <li class="list-group-item">First item</li>
+  <li class="list-group-item">Second item</li>
+  <li class="list-group-item">Third item</li>
+</ul>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
