--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,13 @@
 
-<div class="container">
+<div class="container" style="font-family: Geomanist;">
 		<div class="row justify-content-center align-items-center">
 			<img class="rounded" src="../assets/images/logo.png">	
 		</div>
 	<br>
 	<br>
+	<br>
+	<br>
+
 		<div class="row">
 			<div class="col" style="align-content: center;">
 				<a routerLink="/welcome">
