--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,8 @@
 /* DashboardComponent's private CSS styles */
+body {
+  font-family: Geomanist;
+}
+
 [class*='col-'] {
   float: left;
   padding-right: 20px;
@@ -63,6 +67,7 @@ h4 {
 }
 
 .dash_img {
-  width: 20vw;
-  height: 20vw;
+  width: 10vw;
+  height: 10vw;
 }
+
