--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,27 +1,1 @@
-
-<button>sdf</button><br>
-<button>dfg</button><br>
-<button>sdfg</button><br>
-
-<button>sdf</button><br>
-<button>sdf</button><br>
-
-<button>sdfg</button><br>
-<button>sdf</button><br>
-<button>sdf</button><br>
-
-<ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-
-<br>
-
-<br>
-<br>
-<br>
-<br>
+<app-image-upload-component></app-image-upload-component>
