rate okay, submittting in progress

--- a/src/app/rate-event/rate-event.component.html
+++ b/src/app/rate-event/rate-event.component.html
@@ -7,3 +7,5 @@
 <app-starsrate></app-starsrate>
 <textarea [(ngModel)]="Hero.comment"></textarea>
 {{Hero.comment}}
+<button (click)="getAllInfo()">Submit Review</button>
+{{Hero.rating}}
