--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -1,22 +1,36 @@
-
+<h1>Agenda</h1>
+<br>
 <h3>Day 1</h3>
-
+<br>
 <ul class="list-group">
-  <li class="list-group-item" data-toggle="collapse" data-target="#demo">First item</li>
-  	<div id="demo" class="collapse">
+  <li class="list-group-item" data-toggle="collapse" data-target="#demo"><strong>8:00 - 8:30</strong> Arrival and Registration</li>
+  	<!-- div id="demo" class="collapse">
 		Lorem ipsum dolor text....
-	</div>
-  <li class="list-group-item" data-toggle="collapse" data-target="#demo2">Second item</li>
-  	<div id="demo2" class="collapse">
+	</div -->
+  <li class="list-group-item" data-toggle="collapse" data-target="#demo2"><strong>8:30 - 9:30</strong> Welcome by Vish Rajpal - Key Strategic Focus, Values, 4 BCX Aspirations
+</li>
+  	<!-- div id="demo2" class="collapse">
 		Lorem ipsum dolor text....
-	</div>	
-    <li class="list-group-item" data-toggle="collapse" data-target="#demo3">Third item</li>
-  	<div id="demo3" class="collapse">
+	</div -->	
+    <li class="list-group-item" data-toggle="collapse" data-target="#demo3"><strong>9:30 - 10:00</strong> Tea
+</li>
+  	<!-- div id="demo3" class="collapse">
 		Lorem ipsum dolor text....
-	</div>
-  <li class="list-group-item">Another item</li>
-  <li class="list-group-item">Another item</li>
-  <li class="list-group-item">Another item</li>
+	</div -->
+  <li class="list-group-item"><strong>10:00 - 12:00 </strong> Strategy Speed Dating Presentations (Michael and Leon to facilitate)</li>
+  <li class="list-group-item"><strong>13:00 - 15:00 </strong> Strategy Speed Dating session 2 Keynote address (innovation)</li>
+  <li class="list-group-item">
+<strong>15:00 - 15:30 </strong> Nominees Arrive / tea
+</li>
+<li class="list-group-item">
+<strong> 15:30 - 16:30 </strong> Raymond de Villiers (Innovation)
+</li>
+<li class="list-group-item"><strong> 16:30 - 17:30 </strong> Game (Elana Jacobs)</li>
+<li class="list-group-item"><strong>
+17:30 - 18:30 </strong>  Hotel check-in
+</li>
+<li class="list-group-item"><strong>18:30 - </strong> Dinner, Drinks and Networking (Liquid Chefs)
+</li>
 </ul>
 <br>
 <br>
@@ -24,12 +38,19 @@
 <h3>Day 2</h3>
 
 <ul class="list-group">
-  <li class="list-group-item">First item</li>
-  <li class="list-group-item">Second item</li>
-  <li class="list-group-item">Third item</li>
-  <li class="list-group-item">First item</li>
-  <li class="list-group-item">Second item</li>
-  <li class="list-group-item">Third item</li>
+  <li class="list-group-item">
+<strong>8:00 - 9:00 </strong> Breakfast
+</li>
+  <li class="list-group-item"><strong>9:00 - 10:00 </strong> Grant Drivers (culture)</li>
+  <li class="list-group-item"><strong>
+10:00 - 12:00 </strong>  Four BCX Aspirations, values, culture, purpose (Michael, Lauren) with tea/snacks</li>
+  <li class="list-group-item">
+<strong>12:00 - 13:00 </strong> Lunch
+</li>
+  <li class="list-group-item"><strong>13:00 - 16:00 </strong> Team Building - 'The big picture'
+</li>
+  <li class="list-group-item"><strong>
+16:00 </strong> Close out and departure</li>
 </ul>
 <br>
 <br>
