--- a/src/app/image-upload-component/image-upload-component.component.html
+++ b/src/app/image-upload-component/image-upload-component.component.html
@@ -1,5 +1,6 @@
+<h1>Share a photo</h1>
 
-<label class="image-upload-container btn btn-bwm">
+<label class="image-upload-container btn-bwm">
   <span>Select Image</span>
   <input #imageInput
          type="file"
@@ -25,5 +26,6 @@
 	<button type="button" class="close" data-dismiss="alert">&times;</button>
 	Image Upload Failed!
 </div>
-
+<hr>
+<p>line?</p>
 </div>
