--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,3 +1,8 @@
 <h1>Share a memory! </h1>
 
 <app-image-upload-component></app-image-upload-component>
+<br>
+<br>
+<small>
+	Here are some memories shared by our colleagues :
+</small>
