--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 
-<div class="container" style="font-family: Geomanist;">
+<div class="container">
+	<br>
 		<div class="row justify-content-center align-items-center">
+			
 			<img class="rounded" src="../assets/images/logo.png">	
 		</div>
 	<br>
@@ -8,8 +10,8 @@
 	<br>
 	<br>
 
-		<div class="row">
-			<div class="col" style="align-content: center;">
+		<div class="row justify-content-center align-items-center">
+			<div class="col">
 				<a routerLink="/welcome">
 					<img class="rounded dash_img" src="../assets/images/invitation.png" >
 				<br><small>Welcome</small>
