--- a/src/app/image-upload-component/image-upload-component.component.html
+++ b/src/app/image-upload-component/image-upload-component.component.html
@@ -1,6 +1,6 @@
 <br>
 <label class="image-upload-container btn-bwm">
-  <span>Select Image</span>
+  <span>Upload an Image</span>
   <input #imageInput
          type="file"
          accept="image/*"
