--- a/src/app/rate-event/rate-event.component.html
+++ b/src/app/rate-event/rate-event.component.html
@@ -1,16 +1,29 @@
-<h1>Rate Your Experience !</h1>
+<h1>Strategy X-Ray</h1>
+<h4>Currently reviewing : {{Hero.name}}</h4>
 <br>
-<p><small>
+<!-- p><small>
   Kindly provide your name.
   </small> 
-</p>
+</p -->
 <!-- label>Name :</label> <br -->
-<input [(ngModel)]="Hero.name" type="text" class="comment">
+<!-- input [(ngModel)]="Hero.name" type="text" class="comment">
+<br -->
+<!-- label><small>How do you rate your experience here ? :</small></label --> <br>
+#1 choice for customers in our chosen ecosystem
+<app-starsrate name="first" (click)="myName(0)"></app-starsrate>
+<hr>
+Leverage and invest in ecosystem for scale, access and innovation
+<app-starsrate name="second" (click)="myName(1)"></app-starsrate>
+<hr>
+Leading provider of end-to-end digital solutions by 2025
+<app-starsrate name="third" (click)="myName(2)"></app-starsrate>
+<hr>
+Attracting and building talent for the future
+<app-starsrate name="fourth" (click)="myName(3)"></app-starsrate>
+
 <br>
-<label><small>How do you rate your experience here ? :</small></label> <br>
-<app-starsrate></app-starsrate>
-<br>
-<label><small>Any comments, suggestions ?</small></label> <br>
+<!-- label><small>Any comments, suggestions ?</small></label> <br>
 <textarea [(ngModel)]="Hero.comment" class="comment"></textarea>
-<br>
+<br -->
 <button (click)="getAllInfo()" class="btn-bwm">Submit Review</button>
+<br><br><br><br><br><br><br><br>
