--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -1,3 +1,21 @@
-<p>
-  poll works!
-</p>
+<header>
+    <h1 class="hh1">Poll</h1>
+    <img id="logo" src="https://www.bcx.co.za/wp-content/uploads/2017/05/BCX_LOGO_CMYK_FC-01.png" height="50" width="60">
+    <img id="gif" src="https://i2.wp.com/i.gifer.com/embedded/download/Z3zF.gif" height="50" width="60">
+  </header>
+<hr>
+<div class="container">
+  <div class="row">
+      <p class="quiz">
+        {{currentPoll.question}}
+      </p>
+  <br>
+    </div>
+
+  <div class="row">
+  <div *ngFor = "let ans of currentPoll.responses">
+    <input type="radio" name="" value="{{ans}}"> {{ans}} 
+    <br>
+  </div>
+  </div>  
+</div>
