--- a/src/app/rate-event/rate-event.component.html
+++ b/src/app/rate-event/rate-event.component.html
@@ -26,4 +26,8 @@ Attracting and building talent for the future
 <textarea [(ngModel)]="Hero.comment" class="comment"></textarea>
 <br -->
 <button (click)="getAllInfo()" class="btn-bwm">Submit Review</button>
+	<div class="alert alert-success alert-dismissible">
+		<button type="button" class="close" data-dismiss="alert">&times;</button>
+		Image Uploaded Successfully
+	</div>
 <br><br><br><br><br><br><br><br>
