--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -1,3 +1,5 @@
+<div class="bg">
+<div class="container">
 <h1>Agenda</h1>
 <br>
 <h3>Day 1</h3>
@@ -60,3 +62,5 @@
 <br>
 <br>
 <br>
+</div>
+</div>
