--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-
+<div class="bg">
 <div class="container">
 	<br>
 		<div class="row justify-content-center align-items-center">
@@ -10,32 +10,50 @@
 	<br>
 	<br>
 
-		<div class="row justify-content-center align-items-center">
-			<div class="col">
-				<a routerLink="/welcome">
-					<img class="rounded dash_img" src="../assets/images/invitation.png" >
-				<br><small>Welcome</small>
-			</a>
+		<!--<div class="row justify-content-center align-items-center">-->
+			<div class="row">
+				<div class="col">
+					<a routerLink="/purpose"><img class="rounded dash_img" src="../assets/images/icons/info.png">
+						<br><small>About</small>
+					</a>
+				</div>
+				<div class="col">
+					<a routerLink="/location"><img class="rounded dash_img" src="../assets/images/icons/pin.png">
+						<br><small>Location</small>
+					</a>
 			</div>
-			<div class="col">
-				<a routerLink="/purpose"><img class="rounded dash_img" src="../assets/images/goal.png">
-				<br><small>Purpose</small>
-			</a>
-			</div>
-		</div>
+		<!--</div>-->
+
 	<br>
 	<br>
-		<div class="row">
+	<div class="row">
 			<div class="col">
-				<a routerLink="/location"><img class="rounded dash_img" src="../assets/images/map.png">
-				<br><small>Location</small></a>
-			</div>
-			<div class="col">
-				<a routerLink="/date"><img class="rounded dash_img" src="../assets/images/calendar.png">
-				<br><small>Date</small></a>
+				<div class="row justify-content-center align-items-center">
+					<a routerLink="/date"><img class="rounded dash_img" src="../assets/images/icons/calendar.png">
+						<br><small>Date</small>
+					</a>
+				</div>
 			</div>
 		</div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</div>
+
+
 
   <!-- a *ngFor="let hero of heroes" class="col-1-4"
       routerLink="/detail/{{hero.id}}">
