--- a/src/app/date/date.component.html
+++ b/src/app/date/date.component.html
@@ -1,3 +1,4 @@
+<div class="bg">
 <h1>
   Date
 </h1>
@@ -11,3 +12,17 @@
 </time>
 <br>
 <a routerLink="/dashboard"><button class="btn btn-light">Back</button></a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+</div>
