--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,3 +1,4 @@
+<div class="bg">
 <h1>Share a memory! </h1>
 
 <app-image-upload-component></app-image-upload-component>
@@ -8,10 +9,11 @@
 	
 		<img class="img-rounded" src= "{{ image.imageUrl }}" width="300" height="300" />
 </div>
-	
+</div>
 	
 
 
 <small>
 	Here are some memories shared by our colleagues :
 </small>
+<br>
