--- a/src/app/rate-event/rate-event.component.css
+++ b/src/app/rate-event/rate-event.component.css
@@ -7,6 +7,20 @@
   border: 1px solid;
 }
 
+.bg {
+  /* The image used */
+  background-image: url("../../assets/images/background/1.png");
+
+  /* Full height */
+  height: 100%;
+  width: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .comment {
   width: 100%;
 }
