--- a/src/app/rate-event/rate-event.component.html
+++ b/src/app/rate-event/rate-event.component.html
@@ -1,3 +1,4 @@
+<div class="bg">
 <h1>Strategy X-Ray</h1>
 <h4>Currently reviewing : {{Hero.name}}</h4>
 <br>
@@ -27,3 +28,4 @@ Attracting and building talent for the future
 <br -->
 <button (click)="getAllInfo()" class="btn-bwm">Submit Review</button>
 <br><br><br><br><br><br><br><br>
+</div>
