--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -3,6 +3,21 @@ body {
   
 }
 
+.bg {
+  /* The image used */
+  background-image: url("../../assets/images/background/2.png");
+
+  /* Full height */
+  height: 100%;
+  width: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
 [class*='col-'] {
   float: left;
   padding-right: 20px;
