--- a/src/app/date/date.component.css
+++ b/src/app/date/date.component.css
@@ -1,3 +1,17 @@
+.bg {
+  /* The image used */
+  background-image: url("../../assets/images/background/5.png");
+
+  /* Full height */
+  height: 100%;
+  width: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 time.icon
 {
   font-size: 2em; /* change icon size */
