--- a/src/app/poll/poll.component.css
+++ b/src/app/poll/poll.component.css
@@ -1,3 +1,17 @@
+.bg {
+    /* The image used */
+    background-image: url("../../assets/images/background/1.png");
+  
+    /* Full height */
+    height: 100%;
+    width: 100%;
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
 .gif{
     align-content: center;
     margin-top: 10px;
