--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -1,3 +1,4 @@
+<div class="bg">
 <header>
     <h1 class="hh1">Poll</h1>
     <img id="logo" src="https://www.bcx.co.za/wp-content/uploads/2017/05/BCX_LOGO_CMYK_FC-01.png" height="50" width="60">
@@ -18,4 +19,21 @@
     <br>
   </div>
   </div>  
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </div>
