--- a/src/app/purpose/purpose.component.html
+++ b/src/app/purpose/purpose.component.html
@@ -1,8 +1,19 @@
+<div class="bg">
+<h1>
+  About
+</h1>
 <p>
-  Purpose
-</p>
-<p>
-	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+   <b>Welcome to the FY20 IT Solutions offsite.</b>
+<br><br>
+    As technology has advanced and its power and dominance in our lives has grown, it has ultimately revolutionised not only the way we live, but the way we do business, and how the world works. <br>
+    Individually and collectively we are contributing to building a new future.  A future in which we get to play a role in shaping economic, social, political and environmental agendas. A future in which we innovate solutions for how people: learn | live | work.<br>
+    I encourage YOU to be present at YOUR breakaway - I need your respective individualism, strengths, weakness, aspirations and commitments over the two days to create the collective force that we will require as the inaugural BCX IT Solutions team to succeed going forward.<br>
+    This is your company – please be present and participate, make the difference and play your part in the creation of our inaugural BCX IT Solutions canvas within the BCX context.<br><br>
+    Thanks,<br>
+    Vish Rajpal <br>
+    Chief of IT Solutions
+    
 </p>
 
 <a routerLink="/dashboard"><button class="btn btn-light">Back</button></a>
+</div>
