--- a/src/app/poll/poll.component.css
+++ b/src/app/poll/poll.component.css
@@ -1,5 +1,5 @@
 .bg {
-    /* The image used */
+    /* The image used
     background-image: url("../../assets/images/background/1.png");
   
     /* Full height */
