--- a/src/app/agenda/agenda.component.css
+++ b/src/app/agenda/agenda.component.css
@@ -1,5 +1,5 @@
 .bg {
-    /* The image used */
+    /* The image used
     background-image: url("../../assets/images/background/5.png");
   
     /* Full height */
