--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -4,7 +4,7 @@ body {
 }
 
 .bg {
-  /* The image used */
+  /* The image used 
   background-image: url("../../assets/images/background/2.png");
 
   /* Full height */
