--- a/src/app/rate-event/rate-event.component.css
+++ b/src/app/rate-event/rate-event.component.css
@@ -8,7 +8,7 @@
 }
 
 .bg {
-  /* The image used */
+  /* The image used 
   background-image: url("../../assets/images/background/1.png");
 
   /* Full height */
