--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -6,18 +6,21 @@
   </header>
 <hr>
 <div class="container">
-  <div class="row">
+  <div *ngIf = "voted === 0" class="row">
       <p class="quiz">
         {{currentPoll.question}}
       </p>
   <br>
+    <div *ngFor = "let ans of currentPoll.responses">
+    <button (click)="respondToPoll(ans)"> {{ans}} </button><br>
+  </div> 
     </div>
 
-  <div class="row">
-  <div *ngFor = "let ans of currentPoll.responses">
-    <input type="radio" name="" value="{{ans}}"> {{ans}} 
-    <br>
-  </div>
+  <div *ngIf = "voted === 1" class="row">
+    <div class="alert alert-success alert-dismissible">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    Your Response has been added Successfully! Thank you.
+    </div>
   </div>  
 </div>
 <br>
