about to present

--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -2,57 +2,62 @@
 <div class="container">
 <h1>Agenda</h1>
 <br>
-<h3>Day 1</h3>
+<h3>Day 1 - Wednesday, 21 May 2019</h3>
 <br>
 <ul class="list-group">
   <li class="list-group-item" data-toggle="collapse" data-target="#demo"><strong>8:00 - 8:30</strong> Arrival and Registration</li>
   	<!-- div id="demo" class="collapse">
 		Lorem ipsum dolor text....
 	</div -->
-  <li class="list-group-item" data-toggle="collapse" data-target="#demo2"><strong>8:30 - 9:30</strong> Welcome by Vish Rajpal - Key Strategic Focus, Values, 4 BCX Aspirations
+  <li class="list-group-item" data-toggle="collapse" data-target="#demo2"><strong>8:30 - 9:00</strong> Welcome - Unpacking our purpose and values <br> <i>Vish Rajpal</i>
 </li>
   	<!-- div id="demo2" class="collapse">
 		Lorem ipsum dolor text....
 	</div -->	
-    <li class="list-group-item" data-toggle="collapse" data-target="#demo3"><strong>9:30 - 10:00</strong> Tea
+    <li class="list-group-item" data-toggle="collapse" data-target="#demo3"><strong>9:00 - 9:20</strong> Strategy X-Ray Team 0
 </li>
   	<!-- div id="demo3" class="collapse">
 		Lorem ipsum dolor text....
 	</div -->
-  <li class="list-group-item"><strong>10:00 - 12:00 </strong> Strategy Speed Dating Presentations (Michael and Leon to facilitate)</li>
-  <li class="list-group-item"><strong>13:00 - 15:00 </strong> Strategy Speed Dating session 2 Keynote address (innovation)</li>
+  <li class="list-group-item"><strong>9:30 - 10:00 </strong> Tea Break</li>
+  <li class="list-group-item"><strong>10:00 - 12:00 </strong> Strategy X-Ray Session 1 Team 1 - 6 <br><i> Michael Barnard, Leon Gerber</i></li>
   <li class="list-group-item">
-<strong>15:00 - 15:30 </strong> Nominees Arrive / tea
+<strong>12:00 - 13:00 </strong> Lunch Break
 </li>
 <li class="list-group-item">
-<strong> 15:30 - 16:30 </strong> Raymond de Villiers (Innovation)
+<strong> 13:00 - 15:00 </strong> Strategy X-Ray Session 2 Team 7 - 11 <br><i> Michael Barnard, Leon Gerber</i>
 </li>
-<li class="list-group-item"><strong> 16:30 - 17:30 </strong> Game (Elana Jacobs)</li>
+<li class="list-group-item" style="background-color: black; color: white;text-align: center;"><strong> Arrival of Extended Team </strong></li>
+<li class="list-group-item"><strong> 15:00 - 15:30 </strong> Tea Break</li>
 <li class="list-group-item"><strong>
-17:30 - 18:30 </strong>  Hotel check-in
+15:30 - 16:30 </strong>  Innovation Gamification Exercise
 </li>
-<li class="list-group-item"><strong>18:30 - </strong> Dinner, Drinks and Networking (Liquid Chefs)
+<li class="list-group-item"><strong>16:30 - 17:30 </strong> Hotel Check-in <br><i> Elana Jacobus</i>
+</li>
+<li class="list-group-item" style="background-color: black; color: white;text-align: center;"><strong> Arrival of BCX Exco </strong></li>
+<li class="list-group-item"><strong>16:30 - 17:30 </strong> Dinner, Drinks & Networking
 </li>
 </ul>
 <br>
 <br>
 <br>
-<h3>Day 2</h3>
-
+<h3>Day 2 - Wednesday, 22 May 2019</h3>
+<br>
 <ul class="list-group">
   <li class="list-group-item">
 <strong>8:00 - 9:00 </strong> Breakfast
 </li>
-  <li class="list-group-item"><strong>9:00 - 10:00 </strong> Grant Drivers (culture)</li>
+  <li class="list-group-item"><strong>9:00 - 10:00 </strong> Culture Keynote Address <br> <i>Grant Diver</i></li>
   <li class="list-group-item"><strong>
-10:00 - 12:00 </strong>  Four BCX Aspirations, values, culture, purpose (Michael, Lauren) with tea/snacks</li>
+10:00 - 10:15 </strong> Tea Break</li>
   <li class="list-group-item">
-<strong>12:00 - 13:00 </strong> Lunch
+<strong>10:15 - 12:00 </strong> BCX Strategic Aspirations <br><i> Lauren Du Preez, Michael Barnard</i>
 </li>
-  <li class="list-group-item"><strong>13:00 - 16:00 </strong> Team Building - 'The big picture'
-</li>
+  <li class="list-group-item"><strong>12:00 - 13:00 </strong>Lunch Break</li>
+
+  <li class="list-group-item"><strong>13:00 - 16:00 </strong>Team Building - 'The Big Picture' <br><i> Dream Team Catalyst</i></li>
   <li class="list-group-item"><strong>
-16:00 </strong> Close out and departure</li>
+16:00 - 17:00 </strong> Round Up & Departure <br><i> Vish Rajpal</i></li>
 </ul>
 <br>
 <br>
