--- a/src/app/date/date.component.html
+++ b/src/app/date/date.component.html
@@ -1,17 +1,30 @@
-<div class="bg">
+<div class="container">
 <h1>
   Date
 </h1>
+<div class="row">
+
 <br>
-<small><time datetime="2019-05-19T21:01:00+08:00">8:30 AM, Sunday May 19<sup>th</sup>, 2019</time></small>
+<br>
+
+<small>This session will take place over two days starting Tuesday 21st May, 2019</small>
+
+<br>
+<br>
 
 <time datetime="2019-05-19" class="icon">
-  <em>Sunday</em>
+  <em>Tuesday</em>
   <strong>May</strong>
-  <span>19</span>
+  <span>21</span>
 </time>
 <br>
+
+</div>
+<div class="row">
 <a routerLink="/dashboard"><button class="btn btn-light">Back</button></a>
+
+	
+</div>
 <br>
 <br>
 <br>
