--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -5,9 +5,9 @@
 <br>
 <br>
 <hr>
-<div  *ngFor="let image of galleryImages">
+<div *ngFor="let image of galleryImages" class="gallery">
 	
-		<img class="img-rounded" src= "{{ image.imageUrl }}" width="300" height="300" />
+<div class="img-rounded"><img src= "{{ image.imageUrl }}" width="300" height="300" /></div>
 </div>
 </div>
 	
