--- a/src/app/purpose/purpose.component.html
+++ b/src/app/purpose/purpose.component.html
@@ -1,4 +1,5 @@
-<div class="bg">
+<div class=" container bg ">
+
 <h1>
   About
 </h1>
@@ -9,11 +10,17 @@
     Individually and collectively we are contributing to building a new future.  A future in which we get to play a role in shaping economic, social, political and environmental agendas. A future in which we innovate solutions for how people: learn | live | work.<br>
     I encourage YOU to be present at YOUR breakaway - I need your respective individualism, strengths, weakness, aspirations and commitments over the two days to create the collective force that we will require as the inaugural BCX IT Solutions team to succeed going forward.<br>
     This is your company – please be present and participate, make the difference and play your part in the creation of our inaugural BCX IT Solutions canvas within the BCX context.<br><br>
-    Thanks,<br>
-    Vish Rajpal <br>
-    Chief of IT Solutions
+ 
+
+
     
 </p>
-
-<a routerLink="/dashboard"><button class="btn btn-light">Back</button></a>
+   <div class="row">
+    	<div class="col">     Thanks,<br>
+    Vish Rajpal <br>
+    Chief of IT Solutions </div>
+    	<div class="col"> <img src="https://www.bcx.co.za/wp-content/uploads/2018/01/vish-rajpal-100x100.png"> </div>
+    		
+    </div>
+<!-- a routerLink="/dashboard"><button class="btn btn-light">Back</button></a -->
 </div>
