--- a/src/app/poll/poll.component.css
+++ b/src/app/poll/poll.component.css
@@ -12,6 +12,10 @@
     background-size: cover;
   }
 
+.pollbtn {
+    width: 100%;
+}
+
 .gif{
     align-content: center;
     margin-top: 10px;
@@ -20,7 +24,7 @@
     width: 100%;
     padding: 5px 0px 0px 5px;
     border: 1em;
-    border-style: inset;
+  
    /* margin-right: 80px; */
 
 }
