Added bottom padding and changed heading

--- a/src/app/purpose/purpose.component.css
+++ b/src/app/purpose/purpose.component.css
@@ -5,6 +5,7 @@
     /* Full height */
     height: 100%;
     width: 100%;
+    padding-bottom: 40%;
   
     /* Center and scale the image nicely */
     background-position: center;
