--- a/src/app/purpose/purpose.component.html
+++ b/src/app/purpose/purpose.component.html
@@ -1,18 +1,24 @@
 <div class=" container bg ">
 
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <h1>
   About
 </h1>
 <p>
-   <b>Welcome to the FY20 IT Solutions offsite.</b>
+   <b>Welcome to the ITS Strategic Breakaway.</b>
 <br><br>
-    As technology has advanced and its power and dominance in our lives has grown, it has ultimately revolutionised not only the way we live, but the way we do business, and how the world works. <br>
-    Individually and collectively we are contributing to building a new future.  A future in which we get to play a role in shaping economic, social, political and environmental agendas. A future in which we innovate solutions for how people: learn | live | work.<br>
-    I encourage YOU to be present at YOUR breakaway - I need your respective individualism, strengths, weakness, aspirations and commitments over the two days to create the collective force that we will require as the inaugural BCX IT Solutions team to succeed going forward.<br>
-    This is your company – please be present and participate, make the difference and play your part in the creation of our inaugural BCX IT Solutions canvas within the BCX context.<br><br>
+    As technology has advanced and its power and dominance in our lives has grown, it has ultimately revolutionised not only the way we live, but the way we do business, and how the world works. 
+    <br>
+    Individually and collectively we are contributing to building a new future.  A future in which we get to play a role in shaping economic, social, political and environmental agendas. A future in which we innovate solutions for how people: learn | live | work.
+    <br>
+    I encourage YOU to be present at YOUR breakaway - I need your respective individualism, strengths, weakness, aspirations and commitments over the two days to create the collective force that we will require as the inaugural BCX IT Solutions team to succeed going forward.
+    <br>
+    This is your company – please be present and participate, make the difference and play your part in the creation of our inaugural BCX IT Solutions canvas within the BCX context.
+    <br><br>
  
-
-
     
 </p>
    <div class="row">
