--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -9,7 +9,7 @@
 		<img class="rounded dash_img" src="../assets/images/site.png" width="640" height="400">
 
 		
-			<a href="https://www.google.com/maps/dir//BCX,+1021+Lenchen+Ave+N,+Centurion+Central,+Centurion,+0157/@-25.9568498,27.8473305,10z/data=!4m16!1m6!3m5!1s0x1e9564344f8bf49b:0xb1ae95c0dc3b7178!2sBCX!8m2!3d-25.8615762!4d28.185672!4m8!1m0!1m5!1m1!1s0x1e9564344f8bf49b:0xb1ae95c0dc3b7178!2m2!1d28.185672!2d-25.8615762!3e2" class="btn-bwm">Open In Google Maps</a>
+		<a href="https://www.google.com/maps/dir//BCX,+1021+Lenchen+Ave+N,+Centurion+Central,+Centurion,+0157/@-25.9568498,27.8473305,10z/data=!4m16!1m6!3m5!1s0x1e9564344f8bf49b:0xb1ae95c0dc3b7178!2sBCX!8m2!3d-25.8615762!4d28.185672!4m8!1m0!1m5!1m1!1s0x1e9564344f8bf49b:0xb1ae95c0dc3b7178!2m2!1d28.185672!2d-25.8615762!3e2" class="btn-bwb">Open In Google Maps</a>
 		
 	</div>
 	<br>
@@ -18,7 +18,7 @@
 	
 	<div class="col">
  			
-<a routerLink="/dashboard"><button class="btn btn-light">Back</button></a>
+<a routerLink="/dashboard"><button class="myButton">Back</button></a>
  		</div>
 	
 </div>
