--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -5,16 +5,19 @@
 <h3>Day 1 - Wednesday, 21 May 2019</h3>
 <br>
 <ul class="list-group">
-  <li class="list-group-item" data-toggle="collapse" data-target="#demo"><strong>8:00 - 8:30</strong> Arrival and Registration</li>
+  <li class="list-group-item" data-toggle="collapse" data-target="#demo"><strong>8:00 - 8:30</strong> Arrival </li>
   	<!-- div id="demo" class="collapse">
 		Lorem ipsum dolor text....
 	</div -->
-  <li class="list-group-item" data-toggle="collapse" data-target="#demo2"><strong>8:30 - 9:00</strong> Welcome - Unpacking our purpose and values <br> <i>Vish Rajpal</i>
+  <li class="list-group-item" data-toggle="collapse" data-target="#demo2"><strong>8:30 - 8:40</strong> Welcome <br> <i>Elana Jacobus</i>
 </li>
-  	<!-- div id="demo2" class="collapse">
+  
+  <li class="list-group-item" data-toggle="collapse" data-target="#demo2"><strong>8:40 - 9:00</strong> BCX purpose and values <br> <i>Vish Rajpal</i>
+</li>
+    	<!-- div id="demo2" class="collapse">
 		Lorem ipsum dolor text....
 	</div -->	
-    <li class="list-group-item" data-toggle="collapse" data-target="#demo3"><strong>9:00 - 9:20</strong> Strategy X-Ray Team 0
+    <li class="list-group-item" data-toggle="collapse" data-target="#demo3"><strong>9:00 - 9:20</strong> Strategy X-Ray Team 0 <i>Michael Barnard, Leon Gerber</i>
 </li>
   	<!-- div id="demo3" class="collapse">
 		Lorem ipsum dolor text....
@@ -32,10 +35,10 @@
 <li class="list-group-item"><strong>
 15:30 - 16:30 </strong>  Innovation Gamification Exercise
 </li>
-<li class="list-group-item"><strong>16:30 - 17:30 </strong> Hotel Check-in <br><i> Elana Jacobus</i>
+<li class="list-group-item"><strong>16:30 - 17:30 </strong> 15:30 - 16:30	Escape From The Jungle <br><i> Elana Jacobus</i>
 </li>
 <li class="list-group-item" style="background-color: black; color: white;text-align: center;"><strong> Arrival of BCX Exco </strong></li>
-<li class="list-group-item"><strong>16:30 - 17:30 </strong> Dinner, Drinks & Networking
+<li class="list-group-item"><strong>16:30 - 17:30 </strong> Accommodation Check-in 
 </li>
 </ul>
 <br>
@@ -47,17 +50,14 @@
   <li class="list-group-item">
 <strong>8:00 - 9:00 </strong> Breakfast
 </li>
-  <li class="list-group-item"><strong>9:00 - 10:00 </strong> Culture Keynote Address <br> <i>Grant Diver</i></li>
-  <li class="list-group-item"><strong>
-10:00 - 10:15 </strong> Tea Break</li>
-  <li class="list-group-item">
-<strong>10:15 - 12:00 </strong> BCX Strategic Aspirations <br><i> Lauren Du Preez, Michael Barnard</i>
-</li>
-  <li class="list-group-item"><strong>12:00 - 13:00 </strong>Lunch Break</li>
-
+  <li class="list-group-item"><strong>9:00 - 10:00 </strong> Keynote Address: Cultur <br> <i>Grant Driver</i></li>
+  <li class="list-group-item"><strong>10:00 - 10:30 </strong> Change Agents <br> <i> Magdaleen Roode </i></li>
+  <li class="list-group-item"><strong>10:30 - 10:45 </strong> Tea Break <br></li>
+  <li class="list-group-item"><strong>10:45- 12:00 </strong>BCX Strategic Aspirations <i> Lauren Du Preez, Michael Barnard  </i></li>
+  <li class="list-group-item"><strong>12:00 - 13:00 </strong> Lunch Break <br></li>
   <li class="list-group-item"><strong>13:00 - 16:00 </strong>Team Building - 'The Big Picture' <br><i> Dream Team Catalyst</i></li>
-  <li class="list-group-item"><strong>
-16:00 - 17:00 </strong> Round Up & Departure <br><i> Vish Rajpal</i></li>
+  <li class="list-group-item"><strong>16:00 - 17:00 </strong> Wrap up <br><i> Vish Rajpal</i></li>
+  <li class="list-group-item"><strong>17:00 </strong> Depature <br></li>
 </ul>
 <br>
 <br>
