--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -50,12 +50,13 @@
   <li class="list-group-item">
 <strong>8:00 - 9:00 </strong> Breakfast
 </li>
-  <li class="list-group-item"><strong>9:00 - 10:00 </strong> Keynote Address: Cultur <br> <i>Grant Driver</i></li>
+  <li class="list-group-item"><strong>9:00 - 10:00 </strong> Lead From Here: How to create a can do culture <br> <i>Grant Driver</i></li>
   <li class="list-group-item"><strong>10:00 - 10:30 </strong> Change Agents <br> <i> Magdaleen Roode </i></li>
   <li class="list-group-item"><strong>10:30 - 10:45 </strong> Tea Break <br></li>
   <li class="list-group-item"><strong>10:45- 12:00 </strong>BCX Strategic Aspirations <i> Lauren Du Preez, Michael Barnard  </i></li>
   <li class="list-group-item"><strong>12:00 - 13:00 </strong> Lunch Break <br></li>
-  <li class="list-group-item"><strong>13:00 - 16:00 </strong>Team Building - 'The Big Picture' <br><i> Dream Team Catalyst</i></li>
+  <li class="list-group-item"><strong>13:00 - 15:50 </strong>Team Building - 'The Big Picture' <br><i> Dream Team Catalyst</i></li>
+  <li class="list-group-item"><strong>15:50 - 16:00 </strong> Tea Break <br></li>
   <li class="list-group-item"><strong>16:00 - 17:00 </strong> Wrap up <br><i> Vish Rajpal</i></li>
   <li class="list-group-item"><strong>17:00 </strong> Depature <br></li>
 </ul>
