--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,32 +1,42 @@
 <div class="bg">
-<div class="container">
-	<br>
+	<div class="container">
+		<br>
 		<div class="row justify-content-center align-items-center">
-			
 			<img class="rounded" src="../assets/images/logo.png">	
 		</div>
-	<br>
-	<br>
-	<br>
-	<br>
 
-		<!--<div class="row justify-content-center align-items-center">-->
-			<div class="row">
-				<div class="col">
-					<a routerLink="/purpose"><img class="rounded dash_img" src="../assets/images/icons/info.png">
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<div class="row">
+			<div class="col">
+				<div class="row justify-content-center align-items-center">
+					<a routerLink="/purpose" align="center"><img class="rounded_dash_img" src="../assets/images/icons/info.png">
 						<br><small>About</small>
 					</a>
 				</div>
-				<div class="col">
-					<a routerLink="/location"><img class="rounded dash_img" src="../assets/images/icons/pin.png">
+			</div>
+		</div>
+
+		<br>
+		<br>
+		<br>
+		
+		<div class="row">
+			<div class="col">
+				<div class="row justify-content-center align-items-center">
+					<a routerLink="/location" align="center"><img class="rounded_dash_img" src="../assets/images/icons/pin.png">
 						<br><small>Location</small>
 					</a>
+				</div>
 			</div>
-		<!--</div>-->
+		</div>
 
 	<br>
 	<br>
-	<div class="row">
+		<!--<div class="row">
 			<div class="col">
 				<div class="row justify-content-center align-items-center">
 					<a routerLink="/date"><img class="rounded dash_img" src="../assets/images/icons/calendar.png">
@@ -34,23 +44,23 @@
 					</a>
 				</div>
 			</div>
-		</div>
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+		</div>-->	
+	</div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 </div>
 
 
