--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -17,30 +17,49 @@ body {
   background-size: cover;
 }
 
+img.rounded_dash_img
+{
+  height: 30%;
+  width: 30%;
+  /*display: block;
+  margin-left: auto;
+  margin-right: auto;*/
+  
+}
+
 
 [class*='col-'] {
   float: left;
   padding-right: 20px;
   padding-bottom: 20px;
 }
+
 [class*='col-']:last-of-type {
   padding-right: 0;
 }
+
 a {
   text-decoration: none;
+  /*display: block;
+  margin-left: auto;
+  margin-right: auto;*/
 }
+
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 h3 {
   text-align: center;
   margin-bottom: 0;
 }
+
 h4 {
   position: relative;
 }
+
 .grid {
   margin: 0;
 }
