update local repo

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 	<br>
 		<div class="row justify-content-center align-items-center">
 			
-			<img class="rounded" src="../assets/images/logo.png">	
+			<img class="rounded" src="https://s3.us-east-2.amazonaws.com/itssesseion/logo.png">	
 		</div>
 	<br>
 	<br>
@@ -13,12 +13,12 @@
 		<!--<div class="row justify-content-center align-items-center">-->
 			<div class="row">
 				<div class="col">
-					<a routerLink="/purpose"><img class="rounded dash_img" src="../assets/images/icons/info.png">
+					<a routerLink="/purpose"><img class="rounded dash_img" src="https://image.flaticon.com/icons/png/512/1660/1660164.png">
 						<br><small>About</small>
 					</a>
 				</div>
 				<div class="col">
-					<a routerLink="/location"><img class="rounded dash_img" src="../assets/images/icons/pin.png">
+					<a routerLink="/location"><img class="rounded dash_img" src="https://cdn3.droom.in/photos/images/web/beta/images/icons/search-amp/location.svg">
 						<br><small>Location</small>
 					</a>
 			</div>
@@ -29,7 +29,7 @@
 	<div class="row">
 			<div class="col">
 				<div class="row justify-content-center align-items-center">
-					<a routerLink="/date"><img class="rounded dash_img" src="../assets/images/icons/calendar.png">
+					<a routerLink="/date"><img class="rounded dash_img" src="https://nielafloor.de/images/bilddaten/icons/calendar68.png">
 						<br><small>Date</small>
 					</a>
 				</div>
