--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -6,11 +6,14 @@
 </p -->
 <div class="container">
 	<div class="row">
-		<img class="rounded dash_img" src="../assets/images/site.png" width="640" height="400">
+		<img class="rounded dash_img" src="https://lh3.googleusercontent.com/dTxT_dSVE1AEY_0NLrHCGlrRs_2o8AoEknPvbin1GyNt8bXpSiSxqlggyy3VfM8ffN4GKO3J0AIemuqS34LnFioT0VpqDbzUvPackmFB-zVhnD54q4kfvD_CmD8Cy73DTB2BG_uCMpKNHY2k5A9JanUJZYwHSu5jwmgpVpJfoXjrD3-NYLx_P2oSJfhg5pso28fKa20oBNAeONwZlvdVFag003mWX7vCBDwrCFSC67KwM0dog08TlQZ_P_IjtB1SmZrJ57QKMOSSGKKCfAIQHuyUgQLQ89wwYOXVNc358LsgN9S3Qi_Lq7MDEww-XOpvVDC_fLLqoOBahWqPIGOUVkOQ-NXg8OQAUg7X_y6IICgnUYHcyQ4KG4AwCaZIAn7ju4mGa_V8fhy0v4NshzZWbsr7MPdeixBy4vdlGYiYgm75nN6HjLpCrUnNJz4StzJtV-XW6kRag8A-ZXPkq_MoY8f-1bIWHLUpFywDGZNwsJnWVFpSMyGEbJrY_TRjPnWIS94uj6j4RAqaky5M9_JY8WR3Js_M7a-4TDHab0vBtkDqnJXOvtdfTMHKwNHeW5c9Dw545N3f3FpphZNSwdqYNM2j1TmLgP_hHCvOr_8D6Nk-axDN-1-DlMvfDaHmQm95jMEBqNQa9PJW-7tXzy8jKbfSzCYrnDI__ryTv26Yjy4fHE9qTjWn3dtVeU4nMwIKTAJBxebK-f58Fop0u1xDE59R=w1052-h657-no" width="640" height="400">
 
 		
-			<a href="https://www.google.com/maps/dir//BCX,+1021+Lenchen+Ave+N,+Centurion+Central,+Centurion,+0157/@-25.9568498,27.8473305,10z/data=!4m16!1m6!3m5!1s0x1e9564344f8bf49b:0xb1ae95c0dc3b7178!2sBCX!8m2!3d-25.8615762!4d28.185672!4m8!1m0!1m5!1m1!1s0x1e9564344f8bf49b:0xb1ae95c0dc3b7178!2m2!1d28.185672!2d-25.8615762!3e2" class="btn-bwm">Open In Google Maps</a>
 		
+	</div>
+	<div class="row">
+		
+			<a href="https://www.google.com/maps/dir//BCX,+1021+Lenchen+Ave+N,+Centurion+Central,+Centurion,+0157/@-25.9568498,27.8473305,10z/data=!4m16!1m6!3m5!1s0x1e9564344f8bf49b:0xb1ae95c0dc3b7178!2sBCX!8m2!3d-25.8615762!4d28.185672!4m8!1m0!1m5!1m1!1s0x1e9564344f8bf49b:0xb1ae95c0dc3b7178!2m2!1d28.185672!2d-25.8615762!3e2" class="btn-bwm">Open In Google Maps</a>
 	</div>
 	<br>
 	<br>
